[package]
name = "rnrm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0.4"
dirs = "5.0.1"
regex = "1.10.2"
serde_json = { version = "1.0.108", features = ["preserve_order"] }
